   
   * The syntax ``bzr diff branch1 branch2`` is no longer supported.
     Use ``bzr diff branch1 --new branch2`` instead. This change has
     been made to remove the ambiguity where ``branch2`` is in fact a
     specific file to diff within ``branch1``.

  FEATURES:

   * New option to use custom template-based formats in  ``bzr version-info``.
     (Lukáš Lalinský)

  IMPROVEMENTS:

   * ``bzr diff`` now works on branches without working trees. Tree-less
     branches can also be compared to each other and to working trees using
     the new diff options ``--old`` and ``--new``. Diffing between branches,
     with or without trees, now supports specific file filtering as well.
     (Ian Clatworthy, #6700)

   * ``bzr pack`` now orders revision texts in topological order, with newest
     at the start of the file, promoting linear reads for ``bzr log`` and the
     like. This partially fixes #154129. (Robert Collins)

   * Merge directives now fetch prerequisites from the target branch if
     needed.  (Aaron Bentley)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

   * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)

  BUGFIXES:

   * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

   * When dumb http servers return whole files instead of the requested ranges,
     read the remaining bytes by chunks to avoid overflowing network buffers.
     (Vincent Ladeuil, #175886)

   * ``reconfigure`` is able to convert trees into lightweight checkouts.
     (Aaron Bentley)

  DOCUMENTATION:

   * Reference material has now be moved out of the User Guide and added
     to the User Reference. The User Reference has gained 4 sections as
     a result: Authenication Settings, Configuration Settings, Conflicts