@@ -723,6 +723,15 @@ class TestDiffTree(TestCaseWithTransport):
         self.assertContainsRe(differ.to_file.getvalue(),
                               'was: old\nis: new\n')
 
+    def test_alphabetical_order(self):
+        self.build_tree(['new-tree/a-file'])
+        self.new_tree.add('a-file')
+        self.build_tree(['old-tree/b-file'])
+        self.old_tree.add('b-file')
+        self.differ.show_diff(None)
+        self.assertContainsRe(self.differ.to_file.getvalue(),
+            '.*a-file(.|\n)*b-file')
+
 
 class TestPatienceDiffLib(TestCase):
 
